[gd_scene load_steps=11 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Fonts/Quicksand/static/Quicksand-Medium.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Fonts/Quicksand/static/Quicksand-Bold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Scenes/Server/Message/message.gd" type="Script" id=4]

[sub_resource type="StyleBoxFlat" id=2]
content_margin_left = 10.0
content_margin_right = 10.0
content_margin_top = 10.0
content_margin_bottom = 10.0
bg_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="Curve2D" id=3]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 22.5, 15, 1.75, 4.75, -1.75, -4.75, 20, 7.75, -4.25, 8.5, 4.25, -8.5, 4.75, -2.5, 0, 0, 0, 0, 51.5, 6.75 )
}

[sub_resource type="DynamicFont" id=7]
use_mipmaps = true
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 18
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=5]
draw_center = false

[sub_resource type="StyleBoxFlat" id=6]
draw_center = false

[node name="PanelContainer" type="PanelContainer"]
anchor_right = 1.0
margin_bottom = 66.0
focus_mode = 2
custom_styles/panel = SubResource( 2 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 10.0
margin_top = 10.0
margin_right = 1014.0
margin_bottom = 58.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
visible = false
margin_right = 1004.0
margin_bottom = 14.0

[node name="Control" type="Control" parent="VBoxContainer/HBoxContainer2"]
margin_right = 48.0
margin_bottom = 14.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Path2D" type="Path2D" parent="VBoxContainer/HBoxContainer2/Control"]
curve = SubResource( 3 )

[node name="Line2D" type="Line2D" parent="VBoxContainer/HBoxContainer2/Control/Path2D"]
width = 2.0
default_color = Color( 0.54902, 0.54902, 0.54902, 1 )
joint_mode = 2
antialiased = true

[node name="ReplyMessage" type="Label" parent="VBoxContainer/HBoxContainer2"]
margin_left = 52.0
margin_right = 1004.0
margin_bottom = 14.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 19.54
text = "@Referenced Some refrenced message"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 1004.0
margin_bottom = 48.0

[node name="Avatar" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
margin_right = 48.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )
texture = ExtResource( 1 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 52.0
margin_right = 850.0
margin_bottom = 48.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 5.35

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_right = 798.0
margin_bottom = 14.0
custom_constants/separation = 14

[node name="Name" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_right = 65.0
margin_bottom = 14.0
text = "INdIE DeV"

[node name="Time" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 79.0
margin_right = 192.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0.447059, 0.447059, 0.447059, 1 )
text = "Today at 16:00PM"

[node name="Edited" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
visible = false
margin_left = 206.0
margin_right = 260.0
margin_bottom = 14.0
text = "(edited)"

[node name="Content" type="RichTextLabel" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 798.0
margin_bottom = 48.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/bold_font = SubResource( 7 )
custom_fonts/normal_font = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
bbcode_enabled = true
fit_content_height = true

[node name="TextEdit" type="TextEdit" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
visible = false
margin_top = 42.0
margin_right = 798.0
margin_bottom = 43.0
size_flags_horizontal = 3
size_flags_vertical = 3
caret_blink = true

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 858.0
margin_right = 1004.0
margin_bottom = 20.0
size_flags_horizontal = 10
size_flags_vertical = 0

[node name="Reply" type="Button" parent="VBoxContainer/HBoxContainer/HBoxContainer2"]
margin_right = 47.0
margin_bottom = 20.0
mouse_filter = 1
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Reply"

[node name="Edit" type="Button" parent="VBoxContainer/HBoxContainer/HBoxContainer2"]
margin_left = 51.0
margin_right = 87.0
margin_bottom = 20.0
mouse_filter = 1
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = true
text = "Edit"

[node name="Delete" type="Button" parent="VBoxContainer/HBoxContainer/HBoxContainer2"]
margin_left = 91.0
margin_right = 146.0
margin_bottom = 20.0
mouse_filter = 1
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Delete"

[connection signal="mouse_entered" from="." to="." method="_on_PanelContainer_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_PanelContainer_mouse_exited"]
[connection signal="gui_input" from="VBoxContainer/HBoxContainer/VBoxContainer/TextEdit" to="." method="_on_TextEdit_gui_input"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/HBoxContainer2/Reply" to="." method="_on_Reply_pressed"]
[connection signal="toggled" from="VBoxContainer/HBoxContainer/HBoxContainer2/Edit" to="." method="_on_Edit_toggled"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/HBoxContainer2/Delete" to="." method="_on_Delete_pressed"]
